# SysOp

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  dockDockBuildParams.json  l2_z1  l2_z2  l2_z4  main.c
Lab_01/zad1/: CMakeLists.txt  Makefile  library  library.c  library.h  main.c  main_dynamic.c  makefile  results2.txt  results3a.txt  results3b.txt  test_1.txt  test_3.txt  test_4.txt  tmp.txt
Lab_01/zad_1/: library.h  main.c
Lab_02/zad_1/: Makefile  test_1.txt  test_2.txt  zad_1.c  zad_1_system.c
Lab_02/zad_2/: Makefile  test.txt  zad_2.c  zad_2_system.c
Lab_02/zad_3/: Makefile  b.txt  c.txt  dane.txt  zad_3.c  zad_3_system.c
Lab_02/zad_4/: Makefile  input.txt  output.txt  zad_4.c  zad_4_system.c
Lab_02/zad_5/: Makefile  a.txt  b.txt  zad_5.c  zad_5_system.c
Lab_03/zad_1/: zad_1.c
Lab_03/zad_2/: library.c  library.h  test_4.txt  tmp.txt  zad_2.c
Lab_03/zad_3/: zad_3.c
Lab_03/zad_3/test/: a.txt  test123.txt  x.txt
Lab_04/zad_1/: Makefile  another  another.c  main  zad_1.c
Lab_04/zad_2/: Makefile  main  zad_2.c
Lab_04/zad_3/: Makefile  catcher.c  sender.c
Lab_05/zad_1/: Makefile  commands.txt  zabawa.c  zad_1.c
Lab_05/zad_3/: Makefile  consumer.c  producer.c  zad_3.c
Lab_05/zad_3/producer_data/: a.txt  b.txt  d.txt  e.txt  f.txt
Lab_06/GizaHubert/cw06/zad_1/: Makefile  client.c  library.h  server.c
Lab_06/GizaHubert/cw06/zad_2/: Makefile  client.c  library.h  server.c
Lab_06/zad_1/: Makefile  client  client.c  library.h  main.c  server  server.c
Lab_06/zad_2/: Makefile  client  client.c  library.h  server  server.c
Lab_07/zad_1/: Makefile  main  main.c  wnioski.txt
Lab_07/zad_2/: Makefile  main  main.c
Lab_08/zad_1/: Makefile  Times.txt  baboon.ascii.pgm  wnioski.txt  zad_1.c
Lab_09/zad_1/: Makefile  main.c
Lab_10/zad_1/: Makefile  client.c  server.c
Lab_10/zad_2/: client.c  server.c
